# PycoGK

./: .gitignore  README.md  pyproject.toml
.github/workflows/: production-gates.yml  publish-pypi.yml
docs/: BOOK.md  PRODUCTION_READINESS.md  PUBLISHING.md
docs/book/: 01_orientation.md  02_installation_and_runtime.md  03_first_project.md  05_modeling_workflow.md  08_troubleshooting.md
docs/picogk/: BOOK.md  PARITY_MATRIX.md
docs/shapekernel/: BOOK.md  README.md
examples/: 01_lattice_to_mesh.py  03_scalar_vector_fields.py  06_slicing_and_cli.py  07_images_and_tga.py  09_polyline_and_viewer.py  10_utils_tempfolder_log.py  11_viewer_controls_and_timelapse.py
examples/picogk/: 02_voxel_boolean_filters.py  04_openvdb_io.py  05_stl_io_and_mesh_math.py  08_animation_and_csv.py  basic_usage.py
examples/shape_kernel/: _shared.py  ex_base_box_showcase.py  ex_base_cylinder_showcase.py  ex_base_lens_showcase.py  ex_base_pipe_segment_showcase.py  ex_base_pipe_showcase.py  ex_base_ring_showcase.py  ex_base_sphere_showcase.py  ex_basic_lattices.py  ex_lattice_manifold_showcase.py  ex_lattice_pipe_showcase.py  migration_sh_preview_equivalents.py  migration_visualization_equivalents.py
examples/shapekernel/: _shared.py  ex_base_box_showcase.py  ex_base_cylinder_showcase.py  ex_base_lens_showcase.py  ex_base_pipe_segment_showcase.py  ex_base_pipe_showcase.py  ex_base_ring_showcase.py  ex_base_sphere_showcase.py  ex_basic_lattices.py  ex_lattice_manifold_showcase.py  ex_lattice_pipe_showcase.py  example_spline.py  migration_sh_preview_equivalents.py  migration_visualization_equivalents.py
src/_common/: __init__.py  types.py
src/implicit_library/: __init__.py  coordinate_trafo.py  i_implicit.py  implicit_modular.py  random_deformation_field.py  raw_tpms_patterns.py  splitting_logic.py
src/lattice_library/: __init__.py  _helpers.py
src/penrose_pattern/: __init__.py  penrose_pattern.py  rhombic_tile.py  robinson_triangle.py
src/picogk/: __init__.py  _api.py  _base.py  _common.py  _config.py  _errors.py  _extras.py  _native.py  _types.py  _viewer_protocol.py
src/quasi_crystal/: __init__.py  icosahedral_face.py  quasi_crystal.py  quasi_tile.py  quasi_tile_01.py  quasi_tile_02.py  quasi_tile_03.py  quasi_tile_04.py  quasi_tile_inflation.py
src/shape_kernel/: _types.py
src/shapekernel/: __init__.py
tests/: __init__.py  _helpers.py  conftest.py  test_extras.py  test_parity_gate.py  test_production_readiness.py  test_smoke.py  test_stability.py
tests/implicit_library/: test_implicitlibrary.py
tests/lattice_library/: test_latticelibrary.py
tests/picogk/: test_extras.py  test_smoke.py  (+3 more)
tools/: validate_publish.py  verify_wheel.py
(+149 files in other folders)
