[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycogk"
version = "0.1.0"
description = "Python ctypes bindings for PicoGK runtime with vedo viewer"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "pycogk contributors" }]
keywords = ["geometry", "voxels", "mesh", "openvdb", "cad", "engineering"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "numpy>=1.26",
  "vedo>=2025.5.0",
]

[project.urls]
Homepage = "https://github.com/leap71/PicoGK"
Documentation = "https://github.com/leap71/PicoGK"
Repository = "https://github.com/leap71/PicoGK"
Issues = "https://github.com/leap71/PicoGK/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
picogk = [
  "native/**/*",
]
